force-app/main/default/objects/Locate_Request__c/Locate_Request__c.object-meta.xml
<CustomObject>
    <label>Locate Request</label>
    <nameField>
        <label>Locate Request Number</label>
        <type>AutoNumber</type>
        <displayFormat>LR-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Locate Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>