force-app/main/default/objects/Locate_Request__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Locate Requests</relationshipLabel>
    <relationshipName>Assigned_Locate_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>