force-app/main/default/objects/Locate_Request__c/fields/Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>Cleared_Date__c</fullName>
    <label>Cleared</label>
    <type>Date</type>
</CustomField>