force-app/main/default/objects/Locate_Request__c/fields/Electric_Marked__c.field-meta.xml
<CustomField>
    <fullName>Electric_Marked__c</fullName>
    <label>Electric Marked</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>