force-app/main/default/objects/Locate_Request__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <label>Ticket Expires</label>
    <type>Date</type>
</CustomField>