force-app/main/default/objects/Locate_Request__c/fields/Expired_Flag__c.field-meta.xml
<CustomField>
    <fullName>Expired_Flag__c</fullName>
    <label>Expired</label>
    <formula>AND( NOT(ISPICKVAL(Status__c,"Cleared to Dig")), NOT(ISBLANK(Expiration_Date__c)), Expiration_Date__c &lt; TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>