force-app/main/default/objects/Locate_Request__c/fields/Gas_Marked__c.field-meta.xml
<CustomField>
    <fullName>Gas_Marked__c</fullName>
    <label>Gas Marked</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>