force-app/main/default/objects/Locate_Request__c/fields/Locate_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Locate_By_Date__c</fullName>
    <label>Locate By</label>
    <type>Date</type>
</CustomField>