force-app/main/default/objects/Locate_Request__c/fields/Locate_Scope__c.field-meta.xml
<CustomField>
    <fullName>Locate_Scope__c</fullName>
    <label>Locate Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>