force-app/main/default/objects/Locate_Request__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <label>Lot</label>
    <referenceTo>Lot__c</referenceTo>
    <relationshipLabel>Locate Requests</relationshipLabel>
    <relationshipName>Lot_Locate_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>