force-app/main/default/objects/Locate_Request__c/fields/Takeoff__c.field-meta.xml
<CustomField>
    <fullName>Takeoff__c</fullName>
    <label>Takeoff</label>
    <referenceTo>Takeoff__c</referenceTo>
    <relationshipLabel>Locate Requests</relationshipLabel>
    <relationshipName>Locate_Requests</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>