force-app/main/default/objects/Locate_Request__c/fields/Telecom_Marked__c.field-meta.xml
<CustomField>
    <fullName>Telecom_Marked__c</fullName>
    <label>Telecom Marked</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>