force-app/main/default/objects/Locate_Request__c/fields/Water_Marked__c.field-meta.xml
<CustomField>
    <fullName>Water_Marked__c</fullName>
    <label>Water Marked</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>